# localhttp

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
contrib/launchd/: dev.localhttp.plist
contrib/systemd/: localhttp.service
docs/: architecture.md  commands.md  configuration.md  development.md  index.md  quick-start.md  service-managers.md  tls-and-ports.md
src/: handoff.rs  main.rs  port.rs  serve.rs
src/serve/: certs.rs  control.rs  proxy.rs  tls.rs
